making project structure

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -11,15 +11,20 @@
           testing
         </a>
       </li>
-      <!-- <li><a routerLink="/quest" routerLinkActive="active" ariaCurrentWhenActive="page">
-          Quest
+      <li><a routerLink="/auth" routerLinkActive="active" ariaCurrentWhenActive="page">
+          Auth
         </a>
       </li>
       <li>
-        <a routerLink="/test" routerLinkActive="active" ariaCurrentWhenActive="page">
-          Test
+        <a routerLink="/board" routerLinkActive="active" ariaCurrentWhenActive="page">
+          Board
         </a>
-      </li> -->
+      </li>
+      <li>
+        <a routerLink="/dm" routerLinkActive="active" ariaCurrentWhenActive="page">
+          Dm
+        </a>
+      </li>
     </ul>
   </nav>
 </div>
