--- a/Frontend/src/app/post/post.component.html
+++ b/Frontend/src/app/post/post.component.html
@@ -1,5 +1,39 @@
 <p>post works!</p>
 
+<form [formGroup]="postingForm" (ngSubmit)="createPosting()">
+  <div>
+    <label for="title">Title:</label>
+    <input id="title" formControlName="title">
+  </div>
+
+  <div>
+    <label for="content">Content:</label>
+    <input id="content" formControlName="content">
+  </div>
+
+  <div>
+    <label for="author">Author:</label>
+    <input id="author" formControlName="author">
+  </div>
+
+  <div>
+    <ul>
+      <li *ngFor="let haveItem of postingForm.get('objekt.have')?.value; let i = index">
+        {{ haveItem }}
+      </li>
+    </ul>
+  </div>
+
+  <div>
+    <ul>
+      <li *ngFor="let wantItem of postingForm.get('objekt.want')?.value; let i = index">
+        {{ wantItem }}
+      </li>
+    </ul>
+  </div>
+  <button type="submit">Submit Post</button>
+</form>
+
 <form class="objektFilterForm" [formGroup]="objektFilterForm" (ngSubmit)="getThumbnail()">
   <select id="season" type="text" formControlName="season">
     <option *ngFor="let season of objektFilter.season" [value]="season">{{ season }}</option>
@@ -14,22 +48,17 @@
     <option *ngFor="let classes of objektFilter.classes" [value]="classes">{{ classes }}</option>
   </select>
   <div class="submitButton">
-    <button type="button" (click)="addObjektToArray()">가져오기</button>
+    <button type="button" (click)="addObjektToHaveArray()">Have 가져오기</button>
+  </div>
+  <div class="submitButton">
+    <button type="button" (click)="addObjektToWantArray()">Want 가져오기</button>
   </div>
   <div class="submitButton">
     <button type="button" (click)="getThumbnail()">썸네일가져오기</button>
   </div>
 </form>
 
-<form [formGroup]="postingForm">
-  <ul id="season" type="text" formControlName="season">
-    <li *ngFor="let haveItem of postingForm.get('objekt.have')?.value; let i = index">
-      {{ haveItem }}
-    </li>
-  </ul>
-</form>
-
-<div>
+<!-- <div>
   <h3>Thumbnails</h3>
   <div *ngIf="thumbnail.length > 0">
     <ul>
@@ -37,5 +66,29 @@
         <img [src]="thumb" alt="Thumbnail" style="max-width: 150px; max-height: 150px;">
       </li>
     </ul>
+  </div>
+</div> -->
+
+<div class="postingValues">
+  <div class="title">
+    <p>등록할 오브젝트</p>
+  </div>
+  <div class="content">
+    <p>Have배열</p>
+    <div class="haveObjekt" *ngIf="haveObjektThumbnail.length > 0">
+      <ul>
+        <li *ngFor="let thumb of haveObjektThumbnail">
+          <img [src]="thumb" alt="Thumbnail" style="max-width: 150px; max-height: 150px;">
+        </li>
+      </ul>
+    </div>
+    <p>Want배열</p>
+    <div class="wantObejkt" *ngIf="wantObjektThumbnail.length > 0">
+      <ul>
+        <li *ngFor="let thumb of wantObjektThumbnail">
+          <img [src]="thumb" alt="Thumbnail" style="max-width: 150px; max-height: 150px;">
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
