start a scss design

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,31 +1,26 @@
 <div class="navContainer">
   <nav>
-    <ul>
-      <li>
-        <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
-          Home
-        </a>
-      </li>
-      <li>
-        <a routerLink="/testing" routerLinkActive="active" ariaCurrentWhenActive="page">
-          testing
-        </a>
-      </li>
-      <li><a routerLink="/auth" routerLinkActive="active" ariaCurrentWhenActive="page">
-          Auth
-        </a>
-      </li>
-      <li>
-        <a routerLink="/board" routerLinkActive="active" ariaCurrentWhenActive="page">
-          Board
-        </a>
-      </li>
-      <li>
-        <a routerLink="/dm" routerLinkActive="active" ariaCurrentWhenActive="page">
-          Dm
-        </a>
-      </li>
-    </ul>
+    <button routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
+      Home
+    </button>
+    <button routerLink="/board" routerLinkActive="active" ariaCurrentWhenActive="page">
+      Board
+    </button>
+    <button routerLink="/dm" routerLinkActive="active" ariaCurrentWhenActive="page">
+      Dm
+    </button>
+    <button routerLink="/auth" routerLinkActive="active" ariaCurrentWhenActive="page">
+      Auth
+    </button>
   </nav>
 </div>
+
 <router-outlet></router-outlet>
+
+<footer>
+  <div class="footerContainer">
+    <!-- 깃허브 링크, 연락처, 개발자 프로필 -->
+     <!-- 기타 사이트 주의 사항 및 언급 내용 -->
+      <!-- 공지사항 -->
+  </div>
+</footer>
