Add a mat-select material for multiple option

--- a/Frontend/src/app/auth/auth.component.html
+++ b/Frontend/src/app/auth/auth.component.html
@@ -36,7 +36,9 @@
 </div>
 
 <!-- Validator 검사 실패 시 에러문 작성 -->
-
-<button (click)="onKakaoGetCode()">kakaotest</button>
-
-<button (click)="onGoogleGetCode()">googletest</button>
+<div>
+  <button class="kakaoLoginButton" (click)="onKakaoGetCode()">
+    Kakao
+  </button>
+</div>
+<button class="googleLoginButton" (click)="onGoogleGetCode()">googletest</button>
