--- a/Frontend/src/app/board/board.component.scss
+++ b/Frontend/src/app/board/board.component.scss
@@ -29,6 +29,12 @@
   margin: 1px 2px;
 }
 
+.objektFilterForm {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 button {
   font-size: large;
   font-weight: bold;
@@ -37,8 +43,11 @@ button {
   border: transparent;
   border-radius: 9px;
   transition: background-color 0.3s ease;
+  margin: 6px 9px;
+  padding: 3px 2px;
 
   &:hover {
     background-color: #d6d6d6
   }
 }
+
