--- a/Frontend/src/app/auth/auth.component.scss
+++ b/Frontend/src/app/auth/auth.component.scss
@@ -1,13 +1,40 @@
+.example-container form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 8px;
+  padding: 12px 9px;
+
+  mat-form-field {
+    width: 256px;
+  }
+
+  .buttonContainer {
+    flex-direction: row;
+    button {
+      justify-self: center;
+      margin: 6px 6px;
+    }
+  }
+}
+
+.socialAuthContatiner {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 .kakaoLoginButton {
-  background-image: url('/Frontend/src/assets/images/kakaoLoginButton.png');
+  background: url('C:/otp/Frontend/public/kakaoLoginButton.png') no-repeat;
   background-size: contain; // 아이콘 크기 조정
-  background-repeat: no-repeat;
-  background-position: center; // 아이콘을 왼쪽에 배치
   display: inline-block;
-  width: auto;
+  width: 200px;
   cursor: pointer;
   border: none;
-  background-color: transparent;
+  height: 40px;
 
   // &:hover {
   //   background-color: #0056b3;
@@ -15,24 +42,13 @@
 }
 
 .googleLoginButton {
-  background-image: url('/Frontend/public/googleLoginButton.svg');
-  // background-size: 20px 20px; // 아이콘 크기 조정
-  // background-repeat: no-repeat;
-  // background-position: 10px center; // 아이콘을 왼쪽에 배치
-  // padding-left: 40px; // 아이콘에 맞게 padding을 설정
+  background-image: url('C:/otp/Frontend/public/googleLoginButton.svg');
+  background-repeat: no-repeat;
   display: inline-block;
-  width: auto;
+  width: 200px;
   height: 40px;
   line-height: 40px;
   font-size: 16px;
   cursor: pointer;
   border: none;
-
-  // &:hover {
-  //   background-color: #0056b3;
-  // }
-
-  // &:active {
-  //   background-color: #003f7f;
-  // }
 }
