--- a/Frontend/src/app/post/post.component.html
+++ b/Frontend/src/app/post/post.component.html
@@ -1,60 +1,48 @@
-<p>post works!</p>
-
-<p> {{ check }}</p>
-
-<form [formGroup]="postingForm" (ngSubmit)="createPosting()">
+<div class="postContainer">
   <div>
-    <label for="title">Title:</label>
-    <input id="title" formControlName="title">
-  </div>
+    <form [formGroup]="postingForm" (ngSubmit)="createPosting()">
+      <mat-form-field class="example-full-width">
+        <mat-label for="title">Title:</mat-label>
+        <input matInput placeholder="Title" id="title" formControlName="title">
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label for="content">Content:</mat-label>
+        <textarea matInput placeholder="Content" id="content" formControlName="content">
+      </textarea>
+      </mat-form-field>
 
+      <button mat-button type="submit">Submit Post</button>
+    </form>
+  </div>
   <div>
-    <label for="content">Content:</label>
-    <input id="content" formControlName="content">
-  </div>
-  <div>
-    <ul>
-      <li *ngFor="let haveItem of postingForm.get('objekt.have')?.value; let i = index">
-        {{ haveItem }}
-      </li>
-    </ul>
-  </div>
-
-  <div>
-    <ul>
-      <li *ngFor="let wantItem of postingForm.get('objekt.want')?.value; let i = index">
-        {{ wantItem }}
-      </li>
-    </ul>
-  </div>
-  <button type="submit">Submit Post</button>
-</form>
-
-<form class="objektFilterForm" [formGroup]="objektFilterForm" (ngSubmit)="getThumbnail()">
-  <select id="season" type="text" formControlName="season">
-    <option *ngFor="let season of objektFilter.season" [value]="season">{{ season }}</option>
-  </select>
-  <select id="member" type="text" formControlName="member">
-    <option *ngFor="let member of objektFilter.member" [value]="member">{{ member }}</option>
-  </select>
-  <select id="collectionNo" type="text" formControlName="collectionNo">
-    <option *ngFor="let collectionNo of objektFilter.collectionNo" [value]="collectionNo">{{ collectionNo }}</option>
-  </select>
-  <select id="classes" type="text" formControlName="classes">
-    <option *ngFor="let classes of objektFilter.classes" [value]="classes">{{ classes }}</option>
-  </select>
-  <div class="submitButton">
-    <button type="button" (click)="addObjektToHaveArray()">Have 가져오기</button>
-  </div>
-  <div class="submitButton">
-    <button type="button" (click)="addObjektToWantArray()">Want 가져오기</button>
-  </div>
-  <div class="submitButton">
-    <button type="button" (click)="getThumbnail()">썸네일가져오기</button>
-  </div>
-</form>
-
-<!-- <div>
+    <p>오브젝트 추가하기</p>
+  <form class="objektFilterForm" [formGroup]="objektFilterForm" (ngSubmit)="getThumbnail()">
+    <mat-form-field>
+      <mat-select id="season" type="text" formControlName="season">
+        <mat-option *ngFor="let season of objektFilter.season" [value]="season">{{ season }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-select id="member" type="text" formControlName="member">
+        <mat-option *ngFor="let member of objektFilter.member" [value]="member">{{ member }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-select id="collectionNo" type="text" formControlName="collectionNo">
+        <mat-option *ngFor="let collectionNo of objektFilter.collectionNo" [value]="collectionNo">{{ collectionNo
+          }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-select id="classes" type="text" formControlName="classes">
+        <mat-option *ngFor="let classes of objektFilter.classes" [value]="classes">{{ classes }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-button type="button" (click)="addObjektToHaveArray()">Have 가져오기</button>
+    <button mat-button type="button" (click)="addObjektToWantArray()">Want 가져오기</button>
+  </form>
+</div>
+  <!-- <div>
   <h3>Thumbnails</h3>
   <div *ngIf="thumbnail.length > 0">
     <ul>
@@ -65,26 +53,30 @@
   </div>
 </div> -->
 
-<div class="postingValues">
-  <div class="title">
-    <p>등록할 오브젝트</p>
-  </div>
-  <div class="content">
-    <p>Have배열</p>
-    <div class="haveObjekt" *ngIf="haveObjektThumbnail.length > 0">
-      <ul>
-        <li *ngFor="let thumb of haveObjektThumbnail">
-          <img [src]="thumb" alt="Thumbnail" style="max-width: 150px; max-height: 150px;">
-        </li>
-      </ul>
+  <div class="postingValues">
+    <div class="title">
+      <p>등록할 오브젝트</p>
+      <!-- 추후에 오브젝트 아래에 별칭을 보일 수 있도록 수정-->
+      <!-- 혹은 마우스 호버 시 툴팁으로 오브젝트 정보 제공 -->
     </div>
-    <p>Want배열</p>
-    <div class="wantObejkt" *ngIf="wantObjektThumbnail.length > 0">
-      <ul>
-        <li *ngFor="let thumb of wantObjektThumbnail">
-          <img [src]="thumb" alt="Thumbnail" style="max-width: 150px; max-height: 150px;">
-        </li>
-      </ul>
+    <div class="content">
+      <p>Have</p>
+      <div class="haveObjekt" *ngIf="haveObjektThumbnail.length > 0">
+        <ul>
+          <li *ngFor="let thumb of haveObjektThumbnail">
+            <img [src]="thumb" alt="Thumbnail" style="max-width: 150px; max-height: 150px;">
+          </li>
+        </ul>
+      </div>
+      <p>Want</p>
+      <div class="wantObejkt" *ngIf="wantObjektThumbnail.length > 0">
+        <ul>
+          <li *ngFor="let thumb of wantObjektThumbnail">
+            <img [src]="thumb" alt="Thumbnail" style="max-width: 150px; max-height: 150px;">
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
+
 </div>
