--- a/Frontend/src/app/app.component.scss
+++ b/Frontend/src/app/app.component.scss
@@ -27,6 +27,12 @@
   }
 }
 
+router-outlet {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 .footerContainer {
   width: 100%;
   height: 64px;
