--- a/Frontend/src/app/auth/auth.component.scss
+++ b/Frontend/src/app/auth/auth.component.scss
@@ -6,6 +6,10 @@
   margin-left: 8px;
   padding: 12px 9px;
 
+  border: 1px solid #000000;
+  border-radius: 9px;
+  width: 50%;
+
   mat-form-field {
     width: 256px;
   }
@@ -17,6 +21,15 @@
       margin: 6px 6px;
     }
   }
+}
+
+.example-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  margin: 12px 12px;
 }
 
 .socialAuthContatiner {
