--- a/Frontend/src/app/dm/dm.component.scss
+++ b/Frontend/src/app/dm/dm.component.scss
@@ -1,9 +1,20 @@
-.receiver-list {
+.dmContainer {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  height: auto;
+}
+
+.receiver-list {
+  display: flex;
+  flex-direction: column;
   width: 40%;
   padding: 6px 12px;
   margin: 6px 9px;
+  justify-content: center;
+  align-items: center;
 
   .dmList{
     display: flex;
@@ -25,6 +36,7 @@
   display: flex;
   flex-direction: column;
   width: 40%;
+  align-items: center;
 
   justify-content: end;
   border: 1px solid #999999;
