--- a/Frontend/src/app/app.component.scss
+++ b/Frontend/src/app/app.component.scss
@@ -29,13 +29,21 @@
 
 router-outlet {
   width: 100%;
+  height: 100vh;
   justify-content: center;
   align-items: center;
 }
 
 .footerContainer {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 64px;
   border-top: 1px solid #000000;
   background-color: #ffffff;
+  font-size: x-small;
+
+  a {
+    margin: 3px 3px;
+  }
 }
