--- a/Frontend/src/app/board/board.component.scss
+++ b/Frontend/src/app/board/board.component.scss
@@ -1,53 +1,108 @@
  .searchFormContainer {
-  display: flex;
-  flex-direction: row;
-  border: 1px solid #000000;
-  border-radius: 9px;
-  margin: 6px 9px;
-  padding: 3px 6px;
+   display: flex;
+   flex-direction: column;
+   //  justify-content: center;
+   //  align-items: center;
+
+   border: 1px solid #000000;
+   border-radius: 9px;
+
+   margin: 6px 9px;
+   padding: 6px 12px;
+ }
+
+ .objektArrayContainer {
+   display: flex;
+ }
+
+ .objektArrayForm {
+   width: 100%;
+ }
+
+ .searchButton {
+   display: flex;
+   justify-content: end;
+ }
+
+ .filterFormContainer {
+   display: flex;
+   flex-direction: row;
+
+   justify-content: center;
+   align-items: center;
+ }
+
+ .submitButton {
+   justify-content: end;
+   margin: 6px 9px;
+   padding: 3px 6px;
  }
 
  .postButton {
-  display: flex;
-  justify-content: end;
-  margin: 6px 9px;
-  padding: 3px 6px;
+   display: flex;
+   justify-content: end;
+   margin: 6px 9px;
+   padding: 3px 6px;
  }
- 
+
  .postingCards {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #000000;
-  border-radius: 9px;
-  margin: 6px 9px;
-  padding: 3px 6px;
-}
+   display: flex;
+   flex-direction: column;
+   border: 1px solid #000000;
+   border-radius: 9px;
+   margin: 6px 9px;
+   padding: 3px 6px;
 
-.objektArray {
-  display: flex;
-  flex-direction: row;
-  margin: 1px 2px;
-}
+   .postingCardTitle {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+   }
 
-.objektFilterForm {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
+   .author {
+     display: flex;
+     justify-content: end;
 
-button {
-  font-size: large;
-  font-weight: bold;
-  color: #5974ff;
-  background-color: transparent;
-  border: transparent;
-  border-radius: 9px;
-  transition: background-color 0.3s ease;
-  margin: 6px 9px;
-  padding: 3px 2px;
+   }
 
-  &:hover {
-    background-color: #d6d6d6
-  }
-}
+   .postingCardContent {
+     display: flex;
+     margin: 9px 12px;
+   }
 
+   .objektArray {
+     display: flex;
+     flex-direction: row;
+     margin: 1px 2px;
+     font-family: "Noto Sans", sans-serif;
+
+     p {
+      margin: 6px 9px;
+     }
+     img {
+      margin: 2px 2px;
+     }
+   }
+ }
+
+ .objektFilterForm {
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+ }
+
+ button {
+   font-size: large;
+   font-weight: bold;
+   color: #5974ff;
+   background-color: transparent;
+   border: transparent;
+   border-radius: 9px;
+   transition: background-color 0.3s ease;
+   margin: 6px 9px;
+   padding: 6px 12px;
+
+   &:hover {
+     background-color: #d6d6d6
+   }
+ }
