--- a/Frontend/src/app/post/post.component.scss
+++ b/Frontend/src/app/post/post.component.scss
@@ -3,9 +3,65 @@
   flex-direction: column;
   width: 100%;
 
+  margin: 9px 12px;
+  border: 1px solid #000000;
+  border-radius: 9px;
   justify-content: center;
+  align-items: center;
 
   .example-full-width {
     width: 80%;
+  }
+}
+
+.postingFormContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 9px 12px;
+
+}
+.postingForm{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 6px 9px;
+}
+.submitButton {
+  display: flex;
+  justify-content: end;
+  margin: 6px 9px;
+}
+
+.postingValues {
+  display: flex;
+  flex-direction: column;
+  margin: 9px 12px;
+  width: 80%;
+  justify-content: baseline;
+  .objekt{
+    display: flex;
+    flex-direction: row;
+    
+    img {
+      margin: 2px 2px;
+    }
+  }
+}
+
+button {
+  font-size: large;
+  font-weight: bold;
+  color: #5974ff;
+  background-color: transparent;
+  border: transparent;
+  border-radius: 9px;
+  transition: background-color 0.3s ease;
+  margin: 6px 9px;
+  padding: 6px 12px;
+
+  &:hover {
+    background-color: #d6d6d6
   }
 }
